--- a/_posts/2015-07-10-lisp-part-2.md
+++ b/_posts/2015-07-10-lisp-part-2.md
@@ -42,11 +42,11 @@ There are many functions operating on strings, like for example:
 {% endhighlight %}
 
 Note that none of these functions have any side effect, as it is the case with
-most functions in Lisp (they are pure functions). They create a new object and
+most functions in Lisp - they are pure functions. They create a new object and
 return it.
 
 Integers have 29 bits of precision (I don't know why) and doubles have 64
-bits. Binary starts with "#b", octal with "#o" and Hexadecimal with "#x".
+bits. Binary starts with "#b", octal with "#o" and hexadecimal with "#x".
 
 In Lisp an array is called a vector, and you can create one like so:
 `[ "the" "answer" "is" 42]`. Like lists, they can contain objects of various
@@ -59,7 +59,7 @@ special syntax just for them:
 
 {% highlight lisp %}
 'a               ; => a
-'(a b c)         ; => (a b c)
+'(a b c)         ; => (a b c) equivalent to (list 'a 'b 'c)
 `(1 ,(+ 1 1) 3)  ; => (1 2 3)
 {% endhighlight %}
 
@@ -183,8 +183,8 @@ Let's start with simple boolean functions. `not` returns the negation of its
 argument, so that `(not t)` returns nil and vice versa. Like most functions in
 Lisp, `and` and `or` can take any number of arguments. `and` returns the value
 of the last argument that is true, or nil if it finds an argument that is not
-true. `or` returns the value of the first argument that is true or nil. For
-example:
+true. `or` returns the value of the first argument that is true, or nil if none
+of them are true. For example:
 
 {% highlight lisp %}
 (and 0 'foo)      ; => 'foo => true
@@ -214,16 +214,17 @@ because they can have multiple _then_ or _else_ forms. They return the value of
 the last form or nil. Here is an example:
 
 {% highlight lisp %}
-;; current-time-string returns a string like "Fri Jul 10 10:52:44 2015"
-;; string-prefix-p is a predicate (-p) testing for string prefix
-(defun today-is-friday ()
+;; Predicate (-p) testing if today is a Friday.
+;; current-time-string returns a string like "Fri Jul 10 10:52:44 2015".
+;; string-prefix-p is a predicate testing for a string prefix.
+(defun today-is-friday-p ()
   (string-prefix-p "Fri" (current-time-string)))
 
-(when (today-is-friday)
+(when (today-is-friday-p)
   (message "Yay Friday!")
   (message "I love Fridays"))
 
-(unless (today-is-friday)
+(unless (today-is-friday-p)
   (message "It's not Friday")
   (message "Oh well"))
 {% endhighlight %}
@@ -274,7 +275,7 @@ The simplest loop is a `while`:
 (let ((i 10))
   (while (> i 0)
     (message "%d" i)
-    (decf i)))  ; decrements i. <=> (setq i (- i i))
+    (setq i (- i 1))))  ; you can also use macro (decf i)
 {% endhighlight %}
 
 `dotimes` takes a variable and a count, and sets the variable from 0 to count -
@@ -325,8 +326,7 @@ Lisp uses several keywords for declaring arguments within a `defun`.
   to nil. For example `(defun foo (a b &optional c d) ...)` makes c and d
   optional.
 * `&rest` takes all remaining arguments and concatenates them into a list. For
-  example the arguments of the `list` functions are defined as `(&rest
-  objects)`.
+  example the signature of the `list` function is simply `(&rest objects)`.
 * `&key` introduces a keyword argument, that is an optional argument specified
   by a keyword with a default value of your choice. For example:
 
