--- a/_posts/2015-07-10-lisp-part-2.md
+++ b/_posts/2015-07-10-lisp-part-2.md
@@ -4,21 +4,25 @@ title: "ELisp crash course"
 date: 2015-07-10
 ---
 
-This is the second article in a series about Lisp (it assumes you read the
-first one).
+This is the second article in a series about Lisp; it assumes you read the
+first one.
 
-If you use Emacs but don't know Lisp, you are missing a lot. Emacs is
-infinitely customizable with Emacs Lisp (ELisp). This post is an introduction
-to ELisp, hopefully giving you enough basics to write useful functions. Today
-we will mostly focus on the language itself, as opposed to the gazillion of
+If you use Emacs but don't know Lisp, you are missing a lot: Emacs is
+infinitely customizable with Emacs Lisp. This post is an introduction to ELisp,
+hopefully giving you enough basics to write useful functions. Today we will
+mostly focus on the language itself, as opposed to the gazillion of
 Emacs-specific APIs for editing text.
 
-If you find yourself looking for a function or variable, you can browse the
+My goal is not to review every function of the language: it would take a book
+to do so. My goal instead is to give a good high-level overview of Elisp. If
+you find yourself looking for a function or variable, you can browse the
 [Emacs elisp site](http://www.gnu.org/software/emacs/manual/html_node/elisp/)
-or you can use `M-x apropos` which displays everything that matches a given
+or you can use `M-x apropos` which displays anything that matches a given
 string.
 
-### Basic Types
+Let's start with...
+
+### The Basic Types
 
 Strings are double quoted and can contain newlines. Use backslash to escape
 double quotes:
@@ -28,13 +32,14 @@ double quotes:
 Forgive it for being so terse"
 {% endhighlight %}
 
-The syntax for a character is `?x`: question mark followed by character. Some
-need to be escaped, like for example `?\(`, `?\)` and `?\\`.
+A string is a sequence of characters. The syntax for a character is `?x`:
+question mark followed by character. Some need to be escaped, like for example
+`?\(`, `?\)` and `?\\`.
 
 There are many functions operating on strings, like for example:
 
 {% highlight lisp %}
-(length "foo")              ; returns 3. It also works with lists.
+(length "foo")              ; returns 3 (also works with lists)
 (concat "foo" "bar" "baz")  ; returns a new string "foobarbaz"
 (string= "foo" "foo")       ; string comparison
 (substring "foobar" 0 3)    ; returns "foo"
@@ -48,14 +53,13 @@ return it.
 Integers have 29 bits of precision (I don't know why) and doubles have 64
 bits. Binary starts with "#b", octal with "#o" and hexadecimal with "#x".
 
-In Lisp an array is called a vector, and you can create one like so:
-`[ "the" "answer" "is" 42]`. Like lists, they can contain objects of various
-types. You use spaces to separate the values; comas are part of the Lisp syntax
-but they are used for something else as we will soon see.
+The most useful data structure in Lisp is a list, but the language also has
+arrays, hash tables, and objects. An array is called a vector, and you can
+create one like so: `[ "the" "answer" "is" 42]`. Like lists, they can contain
+objects of various types. You use spaces to separate the values; comas are part
+of the Lisp syntax but they are used for something else as we will soon see.
 
-Lisp has also sets and hash tables but they are not used often: most of the
-time a simple list is sufficient. Since lists are so important there is a
-special syntax just for them:
+Since lists are so important there is a special syntax just for them:
 
 {% highlight lisp %}
 'a               ; => a
@@ -371,7 +375,7 @@ each element of a list and returns a list of the results:
 
 ### Interactive functions
 
-Lets use our fresh knowledge to do something useful. Sometimes I want to
+Let's use our fresh knowledge to do something useful. Sometimes I want to
 include a separator in a comment, e.g. a sequence of dashes or tildas that
 fills up the rest of the line until the 80 character column (the `fill-column`
 variable defines that limit). For example, if I type "// Begin of test" I want
