--- a/_posts/2015-07-10-lisp-part-2.md
+++ b/_posts/2015-07-10-lisp-part-2.md
@@ -59,19 +59,27 @@ create one like so: `[ "the" "answer" "is" 42]`. Like lists, they can contain
 objects of various types. You use spaces to separate the values; comas are part
 of the Lisp syntax but they are used for something else as we will soon see.
 
-Since lists are so important there is a special syntax just for them:
+### Quote
+
+The quote is a special character in the Lisp syntax that prevents an expression
+from being evaluated. For instance:
 
 {% highlight lisp %}
 'a               ; => a
 '(a b c)         ; => (a b c) equivalent to (list 'a 'b 'c)
-`(1 ,(+ 1 1) 3)  ; => (1 2 3)
 {% endhighlight %}
 
 The quote prevents the evaluation of the symbol "a" on the first line, and the
 list on the second line, otherwise they would be considered as a variable and a
-function call respectively. The backquote is like a quote, except that any
-element preceded by a coma is evaluated. The backquote is very handy for
-defining macros, e.g. functions that generate code.
+function call respectively.
+
+The backquote is like a quote, except that any element preceded by a coma is
+evaluated. The backquote is very handy for defining macros, e.g. functions that
+generate code. For example:
+
+{% highlight lisp %}
+`(1 ,(+ 1 1) 3)  ; => (1 2 3)
+{% endhighlight %}
 
 ### Variables
 
