--- a/_posts/2015-07-10-lisp-part-2.md
+++ b/_posts/2015-07-10-lisp-part-2.md
@@ -4,8 +4,8 @@ title: "ELisp crash course"
 date: 2015-07-10
 ---
 
-This is the second article in a series about Lisp (it assumes you read the
-first one).
+This is the second article in a series about Lisp (it assumes you read
+[the first one](/2015/07/04/lisp-part-1)).
 
 If you use Emacs but don't know Lisp, you are missing a lot. Emacs is
 infinitely customizable with Emacs Lisp (ELisp). This post is an introduction
@@ -371,11 +371,12 @@ each element of a list and returns a list of the results:
 
 ### Interactive functions
 
-Lets use our fresh knowledge to do something useful. Sometimes I want to
-include a separator in a comment, e.g. a sequence of dashes or tildas that
-fills up the rest of the line until the 80 character column (the `fill-column`
-variable defines that limit). For example, if I type "// Begin of test" I want
-a magic key to do this:
+Lets use our fresh knowledge to do something useful.
+
+Sometimes I want to include a separator in a comment, e.g. a sequence of dashes
+or tildas that fills up the rest of the line until the 80 character column (the
+`fill-column` variable defines that limit). For example, if I type "// Begin of
+test" I want a magic key to do this:
 
 {% highlight lisp %}
 // Begin of test~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -409,7 +410,60 @@ the cursor. Finally `global-set-key` binds the function to a key chord. Note
 that this is a simple implementation; it might be more efficient to create a
 string with n characters using `(make-string num-chars ?~)`.
 
+Let's write another one. Suppose you work in an organization that has created
+its own code style, and suppose that said code style proclaims that lines
+longer than 80 characters are a cardinal sin. Believe me, such code styles do
+exist. So let's write an interactive function that will find the next "long"
+line in the current buffer, from the position of the cursor. It could look like
+this[^fn-in-exordium]:
+
+{% highlight lisp %}
+(defun goto-long-line (len)
+  "Go to the first line that is at least LEN characters long.
+Use a prefix arg to provide LEN.
+Plain `C-u' (no number) uses `fill-column' as LEN."
+  (interactive "P")
+  (setq len  (or len fill-column))
+  (let ((start-line                 (line-number-at-pos))
+        (len-found                  0)
+        (found                      nil)
+        (inhibit-field-text-motion  t))
+    (while (and (not found) (not (eobp)))
+      (forward-line 1)
+      (setq found  (< len (setq len-found  (- (line-end-position) (point))))))
+    (if found
+        (when (called-interactively-p 'interactive)
+          (message "Line %d: %d chars" (line-number-at-pos) len-found))
+      ;; Compiler-happy equivalent to (goto-line start-line):
+      (goto-char (point-min))
+      (forward-line (1- start-line))
+      (message "Not found"))))
+{% endhighlight %}
+
+This interactive function takes a numeric argument which is the max length of
+lines. The "P" string in the call to `interactive` specifies that we use an
+argument (in raw form; see the documentation of interactive for
+details). Either the user invokes this function with `M-x goto-long-line`, in
+which case the argument `len` is set to nil, or she invokes the function with
+`C-u 7 9 goto-long-line`, in which case the argument `len` is set to 79 (for
+instance). The first `setq` line is used to set a default value to `len`:
+either it is the number that the user specified or it is the value of variable
+`fill-column`.
+
+Without going into too much details, the rest of the code is a `while` loop
+until we have found a line or we reached the end of the buffer (predicate
+`eobp`). At each step we go down one line (`forward-line`) and we check the
+length of the line. Note that the Emacs function `point` returns the position
+of the cursor as an offset into the file (the current character number if you
+will). Our function is designed to be called both interactively and within a
+program, so it tests how we are called using predicate `called-interactively-p`
+before deciding to print a message or not. `point-min` returns the position of
+the first character in the buffer (should be 1) and `goto-char` goes to a given
+character position.
+
 -----
 That's it for today. Lots more to come. Stay tuned!
 
 [^fn-minibuffer]: A right click in the mini-buffer pops up the message buffer. That's a nice trick for debugging if you have a lot of traces.
+
+[^fn-in-exordium]: It is defined in [Exordium](https://github.com/philippe-grenet/exordium).
