--- a/_posts/2015-07-10-lisp-part-2.md
+++ b/_posts/2015-07-10-lisp-part-2.md
@@ -383,7 +383,7 @@ each element of a list and returns a list of the results:
 
 ### Interactive functions
 
-Lets use our fresh knowledge to do something useful.
+Let's use our fresh knowledge to do something useful.
 
 Sometimes I want to include a separator in a comment, e.g. a sequence of dashes
 or tilde that fills up the rest of the line until the 80 character column (the
@@ -457,7 +457,7 @@ lines. The "P" string in the call to `interactive` specifies that we use an
 argument (in raw form; see the documentation of interactive for
 details). Either the user invokes this function with `M-x goto-long-line`, in
 which case the argument `len` is set to nil, or she invokes the function with
-`C-u 7 9 goto-long-line`, in which case the argument `len` is set to 79 (for
+`C-u 7 9 M-x goto-long-line`, in which case the argument `len` is set to 79 (for
 instance). The first `setq` line is used to set a default value to `len`:
 either it is the number that the user specified or it is the value of variable
 `fill-column`.
