Simplified goto-long-line

--- a/_posts/2015-07-10-lisp-part-2.md
+++ b/_posts/2015-07-10-lisp-part-2.md
@@ -435,11 +435,10 @@ this[^fn-in-exordium]:
 Use a prefix arg to provide LEN.
 Plain `C-u' (no number) uses `fill-column' as LEN."
   (interactive "P")
-  (setq len  (or len fill-column))
-  (let ((start-line                 (line-number-at-pos))
-        (len-found                  0)
-        (found                      nil)
-        (inhibit-field-text-motion  t))
+  (setq len (or len fill-column))
+  (let ((start-line (line-number-at-pos))
+        (len-found  0)
+        (found      nil))
     (while (and (not found) (not (eobp)))
       (forward-line 1)
       (setq found  (< len (setq len-found  (- (line-end-position) (point))))))
@@ -472,6 +471,11 @@ program, so it tests how we are called using predicate `called-interactively-p`
 before deciding to print a message or not. `point-min` returns the position of
 the first character in the buffer (should be 1) and `goto-char` goes to a given
 character position.
+
+Note that sometimes the compiler complains when you call a function that is
+designed to be used interactively in your code (these functions are marked as
+such using a property). Usually the warning says you should use another
+function, supposedly more efficient because doing less tests.
 
 -----
 That's it for today. Lots more to come. Stay tuned!
