--- a/_posts/2015-07-10-lisp-part-2.md
+++ b/_posts/2015-07-10-lisp-part-2.md
@@ -5,7 +5,7 @@ date: 2015-07-10
 ---
 
 This is the second article in a series about Lisp; it assumes you read
-[the first one](/2015/07/04/lisp-part-1)).
+[the first one](/2015/07/04/lisp-part-1).
 
 If you use Emacs but don't know Lisp, you are missing a lot: Emacs is
 infinitely customizable with Emacs Lisp. This post is an introduction to ELisp,
@@ -394,7 +394,7 @@ test" I want a magic key to do this:
 // Begin of test~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 {% endhighlight %}
 
-Elisp functions must be declared "iteractive" if you want to call then using
+Elisp functions must be declared "interactive" if you want to call then using
 Meta-x or bind them to a key. You do this declaration by calling the
 interactive special form (it's not a function) as the first form in the body of
 your function.
@@ -441,7 +441,8 @@ Plain `C-u' (no number) uses `fill-column' as LEN."
         (found      nil))
     (while (and (not found) (not (eobp)))
       (forward-line 1)
-      (setq found  (< len (setq len-found  (- (line-end-position) (point))))))
+      (setq found (< len (setq len-found
+                               (- (line-end-position) (point))))))
     (if found
         (when (called-interactively-p 'interactive)
           (message "Line %d: %d chars" (line-number-at-pos) len-found))
