--- a/_posts/2015-07-03-lisp-part-1.md
+++ b/_posts/2015-07-03-lisp-part-1.md
@@ -223,4 +223,4 @@ That's it for today. Lots more to come. Stay tuned!
 
 [^fn-debugger]: If you make a mistake and end up in the debugger, just press q to exit.
 
-[^fn-cons]: CAR and CDR were the names of two registers in the CPU of the IBM 704!
+[^fn-cons]: CAR and CDR were the names of two registers in the CPU of the IBM 704! Those were literally the name of 2 instructions: "contents of the address register" and "contents of the decrement register". You can also use FIRST and REST if you prefer.
