--- a/_posts/2015-08-15-calc.md
+++ b/_posts/2015-08-15-calc.md
@@ -27,8 +27,8 @@ redisplay it using `C-x * *`.
 
 Calc uses the [RPN](https://en.wikipedia.org/wiki/Reverse_Polish_notation)
 (Reverse Polish Notation) logic. Which is only fair, since Lisp uses the Polish
-notation! Anyway, if you are a fan of the old HP calculators, you will be just
-at home.
+notation! Anyway, if you are a fan of the HP calculators, you will be just at
+home.
 
 Calc displays a stack of numbers. When you type a number, it accumulates in the
 stack. When you type an operator such as `+` or `*`, it operates on the last 2
@@ -37,7 +37,7 @@ numbers of the stack, and replaces those numbers with the result.
 Give it a try: Type `M-x calc`, then the following:
 
 - 2 Enter
-- P Enter
+- P (no need to press Enter)
 - 10 Enter
 
 ![Org-mode1](/assets/calc1.png)
@@ -49,8 +49,9 @@ single number which is the result.
 
 Because the dash key (`-`) is reserved for subtraction, you should use an
 underscore (`_`) to enter a negative number. Note that the calculator supports
-arbitrarily big numbers. If you want to challenge it, try calculating
-`2^200`. The default precision is 12 but you can change it using `p`.
+arbitrarily big numbers. If you want to challenge it, try calculating `2^200`
+(that's `2` Enter, `200` Enter, then `^`). The default precision is 12 but you
+can change it using `p`.
 
 Type `n` to negate the last number, and `TAB` to flip the last 2 numbers. The
 delete key deletes the last number on the stack.
@@ -58,14 +59,14 @@ delete key deletes the last number on the stack.
 If you need to use complex numbers, enter them like `(a,b)`. If you need
 fractions, enter them like `1:3` (1/3). You can also enter an algebraic
 expression directly by typing `'` (the quote key) then your expression, such as
-`2 + (10 / 5)`.
+`2 + (10 / 5)`. The result will be put on top of the stack.
 
 Most functions use a single key. For example, type `s` for Sin, `c` for
 Cos, `t` for Tan, etc. The more complex commands are modal: they start with a
 prefix key, which leads to a prompt for the subcommand key. If you get lost,
 type `?` and the mini-buffer will show you what is available.
 
-If you make a mistake, type `u` to undo and `d` to redo. Of course this is
+If you make a mistake, type `U` to undo and `D` to redo. Of course this is
 Emacs, you have an infinite number of undos and redos. You can also reset the
 calculator using `C-x * 0`.
 
